ServiceMesh/Session 3/k8s/deployments/book-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-v2
  labels:
    app: books
    version: v2
    project: istio-course
  namespace: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
      version: v2
      project: istio-course
  template:
    metadata:
      labels:
        app: books
        version: v2
        project: istio-course
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: servicemesh-books
      containers:
        - name: books
          image: alexpletnev/books-service:1.1
          imagePullPolicy: IfNotPresent #Or use Always to download it from dockerhub
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books-destination-rule
  namespace: istio-course
spec:
  host: books
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-virtual-service
  namespace: istio-course
spec:
  hosts:
  - books
  http:
  - route:
    - destination:
        host: books
        subset: v1
      weight: 0
    - destination:
        host: books
        subset: v2
      weight: 100
