ServiceMesh/Session 3/k8s/deployments/frontend-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  labels:
    app: frontend
    version: v2
    project: istio-course
  namespace: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
      project: istio-course
  template:
    metadata:
      labels:
        app: frontend
        version: v2
        project: istio-course
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: servicemesh-frontend
      containers:
        - name: frontend
          image: docker.io/alexpletnev/frontend-service:1.1
          imagePullPolicy: IfNotPresent #Or use Always to download it from dockerhub
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend-destination-rule
  namespace: istio-course
spec:
  host: frontend
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtual-service
  namespace: istio-course
spec:
  hosts:
  - frontend
  http:
    - match:
        - headers:
            developer:
              exact: Dmytro Zhyla
      route:
        - destination:
            host: frontend
            subset: v2
    - route:
      - destination:
          host: frontend
          subset: v1
